Bug 501342 - Liquidshell restarts when clicking bluetooth icon
Summary: Liquidshell restarts when clicking bluetooth icon
Status: RESOLVED FIXED
Alias: None
Product: liquidshell
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.10.0
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Martin Koller
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-11 09:46 UTC by J.O. Aho
Modified: 2025-05-22 13:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J.O. Aho 2025-03-11 09:46:24 UTC
SUMMARY
The first time in a session you click on the bluetooth icon, the liquidshell kind of seems to restart and locate it just above the previous location. The bluetooth UI opens as it should.


STEPS TO REPRODUCE
1. Make a fresh login into liquidshell session
2. Click on the bluetooth icon


OBSERVED RESULT
When clicking on the bluetooth icon to open the bluetooth UI, the liquidshell that is at the bottom of the screen disappears, moments later it's back but now it's not at the bottom of the screen, but the height of the panel further up.

EXPECTED RESULT
When clicking on the bluetooth icon the blutooth UI should open, no other event should happen.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Artix
KDE Plasma Version: 6.3.2-1
KDE Frameworks Version: 24.12.3-1
Qt Version: 6.8.2-1

ADDITIONAL INFORMATION
This behavior been around as long as I have used liquidshell, should be the same for 1.8/1.9 too.

Plausible fix Pull request: https://invent.kde.org/system/liquidshell/-/merge_requests/5
Comment 1 Martin Koller 2025-03-11 14:01:28 UTC
I can reproduce this behavior, also when clicking on the Battery Icon.
Seems it has to do with a KDE component liquidshell uses (KCMultiDialog) - need to contact the developers of it
Comment 2 Martin Koller 2025-05-22 13:19:53 UTC
Git commit f4c480fa05cafddad14f1a42d7c3d4678496d297 by Martin Koller.
Committed on 22/05/2025 at 13:18.
Pushed by mkoller into branch 'master'.

add workaround for weird behavior when opening some configure Dialogs

M  +4    -0    DesktopWidget.cxx

https://invent.kde.org/system/liquidshell/-/commit/f4c480fa05cafddad14f1a42d7c3d4678496d297