add workaround for weird behavior when opening some configure Dialogs

BUG: 501342